--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@ relative_permalinks: true
 # Setup
 title:               LA Open Data
 tagline:             'Policy and Playbook'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+description:         'Draft Open Data Policy and Playbook from the Los Angeles Data Team'
+url:                 http://datala.github.com
 baseurl:             /
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Abhi Nemani
+  url:               https://twitter.com/abhinemani
+  email:             abhi.nemani@lacity.org
 
 # Custom vars
-version:             1.0.0
+version:             2.0.0
