--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ relative_permalinks: true
 title:               CITY OF WEST HOLLYWOOD INNOVATIONS
 tagline:             'ANNUAL REPORT 2015'
 description:         'Inagural report on innovations from the WeHoX Team'
-url:                 http://datala.github.com
+url:                 http://compilerla.github.com
 baseurl:             /2015-report/
 paginate:            5
 
