--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title:               CITY OF WEST HOLLYWOOD INNOVATIONS
 tagline:             'ANNUAL REPORT 2015'
 description:         'Inagural report on innovations from the WeHoX Team'
 url:                 http://compilerla.github.com
-baseurl:             /2015-report/
+baseurl:             /weho
 paginate:            5
 
 # About/contact
