fix rel links for toc

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Dependencies
 markdown:            redcarpet
 redcarpet:
-    extensions: [with_toc_data, footnotes]
+    extensions: [with_toc_data]
 highlighter:         pygments
 
 # Permalinks
